--- a/02-03_编码整合-信息注册.md
+++ b/02-03_编码整合-信息注册.md
@@ -251,3 +251,17 @@
 	</body>
 	</html>
 
+### 2.3.4 新增注册页面样式
+
+在WebContent/css目录下新增reg.css文件。  
+reg.css文件内容：
+
+	.div1{
+		padding-left: 30px;
+		padding-top: 30px;
+	}
+	.age {
+	    padding-left: 80px;
+	    width: 345px;
+	    height: 20px;
+	}
